# TypingEffect.obj2

./: .gitignore  CHANGELOG.txt  LICENSE.txt  README.md  README.txt  TEST_TEXT.txt  TypingEffect.obj2  aviutl2.toml  checker.obj2  readme_user.md
TypingEffect_v0.4.0_source/: README.txt  TypingEffect.obj2  Õ¢óµàïþ¦áÞºúµ×ÉÒé¿Òâ¦Òé©Òâ¦Þ¿¦µû¡.obj2
TypingEffect_v0.4.0_source/source/: build.ps1
TypingEffect_v0.4.0_source/source/lindera_bridge/src/: lib.rs
licenses/: CC-CEDICT_LICENSE.txt  aviutl2-rs_LICENSE.txt
source/: Cargo.toml  TypingEffect.cpp  build-release.cmd  build.ps1  check-syntax.ps1  verify-exports.ps1
source/lindera_bridge/: Cargo.toml
source/sdk/: module2.h
source/src/: lib.rs
