[package]
name = "typing_effect_mod2"
version = "0.4.1"
edition = "2021"
license = "MIT"
publish = false

[lib]
name = "typing_effect"
crate-type = ["cdylib"]

[dependencies]
lindera = { version = "=4.0.0", features = ["embed-ipadic"] }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = "symbols"
panic = "unwind"
