[package]
name = "typing_effect_mod2"
version = "0.9.12"
edition = "2024"
license = "MIT"
publish = false

[lib]
name = "typing_effect"
crate-type = ["cdylib"]

[dependencies]
aviutl2 = { version = "=0.40.0" }
lindera = { version = "=4.0.0", default-features = false, features = ["embed-ipadic", "embed-cc-cedict"] }
pinyin = { version = "=0.11.0", default-features = false, features = ["plain"] }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = "symbols"
panic = "unwind"
