[package]
name = "typing_effect_lindera"
version = "0.4.0"
edition = "2024"
license = "MIT"

[lib]
name = "TypingEffectLindera"
crate-type = ["cdylib"]

[dependencies]
lindera = { version = "4.0.0", features = ["embed-ipadic"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
